fix sidebar on ie

--- a/app/components/Sidebar/index.css
+++ b/app/components/Sidebar/index.css
@@ -21,6 +21,7 @@
 
 .sg-header-inner {
   overflow: auto;
+  height: 100%;
   max-height: 100%;
   background: var(--gray-darker);
 }
